@@ -1,5 +1,6 @@
 ????? ??, 2013 - 5.0.3:
 
+Fixed bug  958: Intermittent NullPointerException while loading XPath node attributes
 Fixed bug  968: Issues with JUnit4 @Test annotation with expected exception (Thanks to Yiannis Paschalidis)
 Fixed bug  975: false positive in ClassCastExceptionWithToArray
 Fixed bug  976: UselessStringValueOf wrong when appending character arrays
